[tool.poetry]
name = "texto"
version = "0.1.1"
description = "Projet de textométrie."
authors = ["Jérémy DEMANGE <jeremy@scrapfast.io>"]

[tool.poetry.dependencies]
python = "^3.6"
spacy = "3.0.3"
nltk = "3.5"
gensim = "4.0.0b0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
texto = 'texto.entry:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
