[tool.poetry]
name = "texto"
version = "0.1.2"
description = "Projet de textométrie."
authors = ["Jérémy DEMANGE <jeremy@scrapfast.io>"]

[tool.poetry.dependencies]
python = "^3.6"
spacy = "3.0.3"
nltk = "3.5"
gensim = "4.0.0b0"

[tool.poetry.dev-dependencies]
pytest="6.2.3"

[tool.poetry.scripts]
texto = 'texto.entry:main'

[tool.poetry.dependencies.fr_core_news_md]
url = "https://github.com/explosion/spacy-models/releases/download/fr_core_news_md-3.0.0/fr_core_news_md-3.0.0.tar.gz"

[build-system]
requires = ["poetry-core>=1.1.2"]
build-backend = "poetry.core.masonry.api"
